name:                flaw-flite
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Alexander Bich
maintainer:          quyse0@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/quyse/flaw-flite.git

library
  exposed-modules:
    Flaw.Audio.Speech.Flite
  other-modules:
  -- other-extensions:    
  build-depends:       base, bytestring, text
  -- hs-source-dirs:      
  default-language:    Haskell2010
  c-sources:
    src/flite/src/audio/audio.c
    -- src/flite/src/audio/au_none.c
    src/flite/src/audio/au_streaming.c
    src/flite/src/cg/cst_cg.c
    src/flite/src/cg/cst_cg_dump_voice.c
    src/flite/src/cg/cst_cg_load_voice.c
    src/flite/src/cg/cst_cg_map.c
    src/flite/src/cg/cst_mlpg.c
    src/flite/src/cg/cst_mlsa.c
    src/flite/src/cg/cst_spamf0.c
    src/flite/src/cg/cst_vc.c
    src/flite/src/hrg/cst_ffeature.c
    src/flite/src/hrg/cst_item.c
    src/flite/src/hrg/cst_rel_io.c
    src/flite/src/hrg/cst_relation.c
    src/flite/src/hrg/cst_utterance.c
    src/flite/src/lexicon/cst_lexicon.c
    src/flite/src/lexicon/cst_lts.c
    src/flite/src/lexicon/cst_lts_rewrites.c
    src/flite/src/regex/cst_regex.c
    src/flite/src/regex/regexp.c
    src/flite/src/regex/regsub.c
    src/flite/src/speech/cst_lpcres.c
    src/flite/src/speech/cst_track.c
    src/flite/src/speech/cst_track_io.c
    src/flite/src/speech/cst_wave.c
    src/flite/src/speech/cst_wave_io.c
    src/flite/src/speech/cst_wave_utils.c
    src/flite/src/speech/g721.c
    src/flite/src/speech/g723_24.c
    src/flite/src/speech/g723_40.c
    src/flite/src/speech/g72x.c
    src/flite/src/speech/rateconv.c
    src/flite/src/stats/cst_cart.c
    src/flite/src/stats/cst_ss.c
    src/flite/src/stats/cst_viterbi.c
    src/flite/src/synth/cst_ffeatures.c
    src/flite/src/synth/cst_phoneset.c
    src/flite/src/synth/cst_ssml.c
    src/flite/src/synth/cst_synth.c
    src/flite/src/synth/cst_utt_utils.c
    src/flite/src/synth/cst_voice.c
    src/flite/src/synth/flite.c
    src/flite/src/utils/cst_alloc.c
    src/flite/src/utils/cst_args.c
    src/flite/src/utils/cst_endian.c
    src/flite/src/utils/cst_error.c
    src/flite/src/utils/cst_features.c
    src/flite/src/utils/cst_file_stdio.c
    src/flite/src/utils/cst_mmap_none.c
    src/flite/src/utils/cst_socket.c
    src/flite/src/utils/cst_string.c
    src/flite/src/utils/cst_tokenstream.c
    src/flite/src/utils/cst_url.c
    src/flite/src/utils/cst_val.c
    src/flite/src/utils/cst_val_const.c
    src/flite/src/utils/cst_val_user.c
    src/flite/src/utils/cst_wchar.c
    src/flite/src/wavesynth/cst_clunits.c
    src/flite/src/wavesynth/cst_diphone.c
    src/flite/src/wavesynth/cst_reflpc.c
    src/flite/src/wavesynth/cst_sigpr.c
    src/flite/src/wavesynth/cst_sts.c
    src/flite/src/wavesynth/cst_units.c
    -- language support
    src/flite/lang/cmu_grapheme_lang/cmu_grapheme_lang.c
    src/flite/lang/cmu_grapheme_lex/cmu_grapheme_lex.c
    src/flite/lang/cmu_grapheme_lang/cmu_grapheme_phoneset.c
    src/flite/lang/cmu_grapheme_lang/cmu_grapheme_phrasing_cart.c
    src/flite/lang/cmu_indic_lang/cmu_indic_lang.c
    src/flite/lang/cmu_indic_lex/cmu_indic_lex.c
    src/flite/lang/cmu_indic_lang/cmu_indic_phoneset.c
    src/flite/lang/cmu_indic_lang/cmu_indic_phrasing_cart.c
    src/flite/lang/cmulex/cmu_lex.c
    src/flite/lang/cmulex/cmu_lex_data.c
    src/flite/lang/cmulex/cmu_lex_entries.c
    src/flite/lang/cmulex/cmu_lts_model.c
    src/flite/lang/cmulex/cmu_lts_rules.c
    src/flite/lang/cmulex/cmu_postlex.c
    src/flite/lang/cmu_time_awb/cmu_time_awb.c
    src/flite/lang/cmu_time_awb/cmu_time_awb_cart.c
    src/flite/lang/cmu_time_awb/cmu_time_awb_clunits.c
    src/flite/lang/cmu_time_awb/cmu_time_awb_lex_entry.c
    src/flite/lang/cmu_time_awb/cmu_time_awb_lpc.c
    src/flite/lang/cmu_time_awb/cmu_time_awb_mcep.c
    src/flite/lang/cmu_us_awb/cmu_us_awb.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_cg.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_cg_durmodel.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_cg_f0_trees.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_cg_phonestate.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_cg_single_mcep_trees.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_cg_single_params.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_spamf0_accent.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_spamf0_accent_params.c
    src/flite/lang/cmu_us_awb/cmu_us_awb_spamf0_phrase.c
    src/flite/lang/cmu_us_kal/cmu_us_kal.c
    src/flite/lang/cmu_us_kal/cmu_us_kal_diphone.c
    src/flite/lang/cmu_us_kal/cmu_us_kal_lpc.c
    src/flite/lang/cmu_us_kal/cmu_us_kal_res.c
    src/flite/lang/cmu_us_kal/cmu_us_kal_residx.c
    src/flite/lang/cmu_us_kal/cmu_us_kal_ressize.c
    src/flite/lang/cmu_us_kal16/cmu_us_kal16.c
    src/flite/lang/cmu_us_kal16/cmu_us_kal16_diphone.c
    src/flite/lang/cmu_us_kal16/cmu_us_kal16_lpc.c
    src/flite/lang/cmu_us_kal16/cmu_us_kal16_res.c
    src/flite/lang/cmu_us_kal16/cmu_us_kal16_residx.c
    src/flite/lang/cmu_us_rms/cmu_us_rms.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_cg.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_cg_durmodel.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_cg_f0_trees.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_cg_phonestate.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_cg_single_mcep_trees.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_cg_single_params.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_spamf0_accent.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_spamf0_accent_params.c
    src/flite/lang/cmu_us_rms/cmu_us_rms_spamf0_phrase.c
    src/flite/lang/cmu_us_slt/cmu_us_slt.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_cg.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_cg_durmodel.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_cg_f0_trees.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_cg_phonestate.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_cg_single_mcep_trees.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_cg_single_params.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_spamf0_accent.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_spamf0_accent_params.c
    src/flite/lang/cmu_us_slt/cmu_us_slt_spamf0_phrase.c
    src/flite/lang/cmu_grapheme_lex/grapheme_unitran_tables.c
    src/flite/lang/usenglish/us_aswd.c
    src/flite/lang/usenglish/us_dur_stats.c
    src/flite/lang/usenglish/us_durz_cart.c
    src/flite/lang/usenglish/us_expand.c
    src/flite/lang/usenglish/us_f0_model.c
    src/flite/lang/usenglish/us_f0lr.c
    src/flite/lang/usenglish/us_ffeatures.c
    src/flite/lang/usenglish/us_gpos.c
    src/flite/lang/usenglish/us_int_accent_cart.c
    src/flite/lang/usenglish/us_int_tone_cart.c
    src/flite/lang/usenglish/us_nums_cart.c
    src/flite/lang/usenglish/us_phoneset.c
    src/flite/lang/usenglish/us_phrasing_cart.c
    src/flite/lang/usenglish/us_pos_cart.c
    src/flite/lang/usenglish/us_text.c
    src/flite/lang/usenglish/usenglish.c
  if os(windows)
    c-sources:
      src/flite/src/audio/au_wince.c
    cc-options:          -DCST_AUDIO_WIN32
  include-dirs:        src/flite/include, src/flite/lang/usenglish, src/flite/lang/cmulex
  cc-options:          -DCST_NO_SOCKETS -O3
